@@ -1,7 +1,6 @@
 package com.ambrosia.loans.discord.command.player.help;
 
 import com.ambrosia.loans.discord.DiscordBot;
-import com.ambrosia.loans.discord.system.theme.AmbrosiaAssets;
 import com.ambrosia.loans.discord.system.theme.AmbrosiaColor;
 import discord.util.dcf.gui.base.gui.DCFGui;
 import discord.util.dcf.gui.base.page.DCFGuiPage;
@@ -15,25 +14,15 @@ import net.dv8tion.jda.api.utils.messages.MessageCreateData;
 
 public abstract class HelpGuiPage extends DCFGuiPage<DCFGui> {
 
-    public static final Button GITHUB_README = Button.link("https://github.com/amp7368/AmbrosiaADD/blob/master/Readme.md", "Readme");
-    public static final Button GITHUB = Button.link("https://github.com/amp7368/AmbrosiaADD", "Github");
-    public static final Button WIKI = Button.link("https://github.com/amp7368/AmbrosiaADD/wiki", "Wiki");
-    public static final Button BLACKJACK_WIKI = Button.link("https://github.com/amp7368/AmbrosiaADD/wiki/Blackjack", "Blackjack");
-
-    public static final Button WIKI_COMMANDS = Button.link("https://github.com/amp7368/AmbrosiaADD/wiki/Commands", "Commands");
+    private static final String LINK_TOS = "https://drive.google.com/file/d/1vvterxdNJx7Uyww3xu_O3zvor9f1QCP-/view?usp=sharing";
 
     public HelpGuiPage(DCFGui dcfGui) {
         super(dcfGui);
-        registerButton("home", (e) -> this.parent.page(0));
-        registerButton("commands", (e) -> this.parent.page(1));
-        registerButton("games", (e) -> this.parent.page(2));
     }
 
     private LayoutComponent quickLinks() {
-        Button home = Button.primary("home", "Home");
-        Button commands = Button.primary("commands", "Commands");
-        Button games = Button.primary("games", "Games");
-        return ActionRow.of(home, commands, games);
+        Button tos = Button.link(LINK_TOS, "Terms of Service");
+        return ActionRow.of(tos);
     }
 
     @Override
@@ -41,13 +30,12 @@ public abstract class HelpGuiPage extends DCFGuiPage<DCFGui> {
         EmbedBuilder embed = new EmbedBuilder();
         embed.setThumbnail(DiscordBot.SELF_USER_AVATAR);
         embed.setColor(this.color());
-        embed.setAuthor(this.getTitle());
-        embed.setTitle(String.format("Help (%d)", getPageNum() + 1));
-        embed.setImage(AmbrosiaAssets.FOOTER_PROMOTE);
+        String title = "# Page %d: %s".formatted(getPageNum() + 1, getTitle());
+        embed.appendDescription(title);
 
         MessageCreateBuilder message = new MessageCreateBuilder()
             .setEmbeds(this.makeEmbed(embed));
-        message.setComponents(pageActionRow(), navigationRow());
+        message.setComponents(quickLinks(), navigationRow());
         return message.build();
     }
 
@@ -57,11 +45,9 @@ public abstract class HelpGuiPage extends DCFGuiPage<DCFGui> {
 
     protected abstract MessageEmbed makeEmbed(EmbedBuilder embedBuilder);
 
-    protected abstract ActionRow pageActionRow();
-
     protected abstract String getTitle();
 
     private ActionRow navigationRow() {
-        return ActionRow.of(btnFirst(), btnPrev(), btnNext(), btnLast());
+        return ActionRow.of(btnPrev(), btnNext());
     }
 }
